# Flurry

./: .gitignore  CONTEXT.md  LICENSE  README.md  RELEASES.md  _pyinstaller_entry.py  build_exe.py  cspell.json  flurry.bat  flurry.sh  make_icon.py  pyproject.toml
flurry/: __init__.py  __main__.py  analyzer.py  cli.py  events.py  parser.py  report.py  server.py  sidecar.py  tail.py
flurry/static/: app.js  overlay.css  overlay.html  overlay.js  styles.css
tests/: sim_live_log.py  test_analyzer.py  test_detect_fights.py  test_enemy_classifier.py  test_overrides.py  test_parser.py  test_sidecar.py  test_tail_window.py
